wp-content/themes/betheme-child/style122.css
/* ... */
.mfn-header-menu .mfn-menu-li > .mfn-menu-link {
  color: #fff;
}

.mfn-close-icon .icon {
  color: #fff !important;
}

.mfn-header-menu .mfn-menu-li:hover > .mfn-menu-link {
  color: #fff;
}

#apps {
  background-repeat: no-repeat;
  background-position: center;
}

#features .column_trailer_box {
  min-height: 25vw;
}

.mcb-section-7f0434abe,
#Footer {
  background-color: #1c1c1c!important;
}

#Footer .footer_copy {
  padding-top: 60px;
}

.ublue-container {
  width: 100%;
  text-align: left;
  display: flex;
  align-items: center;
  justify-content: center;
  max-width: 815px;
  margin: 15px auto 30px auto;
}

.ublue-container .text-container {
  margin-left: 20px;
}

#back_to_top {
  background: #262626;
  color: #fff !important;
  border-radius: 30px;
}

#image-builder-result a {
  color: #ccc;
}

#image-builder-result a:hover {
  color: #fff;
  text-decoration: underline;
}

#desktop a,
#stability a {
  color: #000;
}

#desktop a:hover,
#stability a:hover {
  color: #999;
}

#slider-1-slide-1-layer-6,
.button-custom .button {
  font-family: "DM Sans"!important;
}

#hardware .tablet-two-third.column {
  width: 100% !important;
}

#hardware .fa-gamepad {
  color: #7148b7;
}

#hardware .fa-computer {
  color: #507D00;
}

#hardware .fa-wifi {
  color: #6363ee;
}

#image-builder select {
  min-width: 300px;
}

.select-wrapper {
  display: block;
  position: relative;
  background: #262626;
  max-width: 300px;
}

.gamemode label::after {
  content: '(This will automatically login to game mode and only supports a single user)';
  width: 100%;
  display: inline-block;
  font-weight: 300;
  font-size: 16px;
  font-style: italic;
} 

.picker-message {
  color: #a4a4a4;
  font-style: italic;
  font-size: 14px;
  max-width: 400px;
  display: inline-block;
  line-height: 20px;
  margin-bottom: 15px;
}

.picker-message > a {
  text-decoration: underline;
}

#features {
  background-position: center;
}

.copyright-text {
  margin-bottom: 15px;
  display: inline-block;
  width: 100%;
}

.affiliated {
  color: #939393;
  font-size: 13px;
  font-style: italic;
  display: inline-block;
  margin:auto;
  max-width: 830px;
}

.answer-overflow-icon {
  height: 30px;
  width: 30px;
  display: inline-block;
  margin-left: 10px;
  position: absolute;
}

.hover-contrib,
.sponsor,
.discourse-docs,
.link-faq {
  background: #f0f0f0;
  color: #000;
  border-radius: 100%;
  padding: 5px 8px;
  font-size: 17px;
  line-height: 20px;
  cursor: pointer;
  margin-left: 5px;
}

.hover-contrib,
.discourse-docs,
.link-faq {
  width: 30px;
  text-align: center;
}

.hover-contrib:hover,
.sponsor:hover,
.discourse-docs:hover,
.link-faq:hover {
  background: #dfdfdf;
}

.sponsor {
  color: rgb(219, 97, 162);
  border-radius: 15px;
  white-space: nowrap;
  font-size: 14px;
  min-height: 17px;
  display: inline-block;
  position: relative;
  top: -2px;
}

.sponsor i {
  font-size: 17px;
}

.answer-overflow-icon:hover {
  filter: brightness(0.8);
}

.hover-contrib::after {
  content: url('https://repobeats.axiom.co/api/embed/86b500d79c613015ad16f56df76c8e13f3fd98ae.svg');
  left: -510px;
  position: absolute;
  top: -395px;
  width: 845px;
  padding: 15px;
  box-shadow: 0px 0px 5px rgba(0,0,0,0.25);
  background-color: #000000E3;
  border-radius: 24px;
  backdrop-filter: blur(10px);
  pointer-events: none;
  opacity: 0;
  transform: scale(0.8) translateX(100px) translateY(100px);
  transition: opacity .25s ease-in-out, transform .35s ease-in-out;
}

.hover-contrib:hover::after {
  opacity: 1;
  transform: scale(1.0);
}

.mcb-wrap-inner-tc7x20tbk {
  margin-top: 65px;
}

.slick-slide img {
  width:auto;
}

.testimonials_slider.single-photo .testimonials_slider_ul li .single-photo-img {
  border-radius: 0px !important;
  max-width: 230px !important;
  width: auto;
  height: inherit;
}

.author .title {
  font-size: 14px;
}

blockquote {
  margin-left: 65px;
  top: 5px;
  border: none;
  font-style: italic;
  text-decoration: none !important;
}

.testimonials_slider .testimonials_slider_ul li .bq_wrapper {
  padding: 30px 40px 10px;
  border-radius: 24px;
  background: #fff;
  margin: 0 0 20px !important;
}

.testimonials_slider .testimonials_slider_ul li .author {
  text-align: right;
}

.testimonials_slider .testimonials_slider_ul li .author h5 {
  margin-right:30px;
  font-style:italic;
}

.testimonials_slider .testimonials_slider_ul li .author h5 > a {
  color:#a2a2a2;
}

.testimonials_slider .testimonials_slider_ul li .author .company,
.testimonials_slider .testimonials_slider_ul li .hr_dots {
  display: none;
  visibility: hidden;
}

.icon-up-open-big::before {
  content: '\f062';
  font-family: 'Font Awesome 6 Free';
  font-weight: 900;
}

.testimonials_slider .testimonials_slider_ul li .author h5 > a::after {
  content: '\f0c1';
  font-family: 'Font Awesome 6 Free';
  font-style: normal;
  margin-left: 10px;
  font-size: 24px;
  top: 2px;
  position: relative;
  font-weight: 900;
  color: #888;
}

.testimonials_slider .testimonials_slider_ul li .author h5 > a.youtube::after {
  content: '\f167';
  color: #ff1a1a;
  font-size: 30px;
  top: 6px;
  font-family: 'Font Awesome 6 Brands';
}

.icon-quote::before {
  content: '\f10d';
  font-family: 'Font Awesome 6 Free';
  font-weight: 900;
  font-size: 45px;
  top: -5px;
  position: relative;
}

.mfn-close-icon > span::after {
  content: '\f057';
  font-family: 'Font Awesome 6 Free';
  font-weight: 900;
  display: inline-block;
  visibility: visible;
  font-size: 30px;
  right: 25px;
  top: 25px;
  position: relative;
}

.mfn-close-icon > span {
  display: none;
  visibility: hidden;
}

.mfn-close-icon:hover .icon {
  transform: none!important;
}

.slider_pagination .slick-active a::after,
.slider_pagination a.selected::after {
  display: none;
  visibility: hidden;
}

.slider_pagination .slick-active a,
.slider_pagination a.selected {
  border-radius: 100%;
  height: 12px;
  width: 12px;
  background: linear-gradient(180deg, rgb(89, 202, 253) 0%, rgb(43, 80, 239) 100%);
}
/* ... */

